--- a/.github/workflows/to_dockerhub.yml
+++ b/.github/workflows/to_dockerhub.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - uses: olegtarasov/get-tag@v2.1.2
         id: tagName
+        with:
+          tagRegex: "v(.*)"
 
       - uses: actions/checkout@v3
 
@@ -43,5 +45,5 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=smoothdenis/deploy-code-server:buildcache-devpack
           cache-to: type=registry,ref=smoothdenis/deploy-code-server:buildcache-devpack,mode=max
-        env: 
-          IMAGE_TAG: ${{ steps.tagName.outputs.tag }}
+          build-args: BASE_IMAGE=${{ steps.tagName.outputs.tag }}
+
